--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -26,6 +26,26 @@ header {
   color: white;
   height: 150px; 
 }
+table{
+  width: 80%;
+  text-align: center;
+  margin-left: 10%; 
+  margin-right: 10%;
+  margin-top: 5%; 
+}
+th {
+  background-color: lightsteelblue;
+  font-size: 1.5em; 
+}
+th, td {
+  height: 50px; 
+  text-align: center; 
+  padding: 15px; 
+  border-bottom: 1px solid #ddd;
+}
+tr:hover {
+  background-color: #f5f5f5;
+}
 #site-title {
   float: left; 
   margin-top: 50px; 
