--- a/src/components/CheckoutView/TopComponent/TopComponent.css
+++ b/src/components/CheckoutView/TopComponent/TopComponent.css
@@ -1,10 +1,11 @@
 p {
     font-size: 20px;
+    text-align: left;
 }
 
 span {
     text-align: center;
-    align-self: center;
+    font-size: 20px;
 }
 
 .container {
@@ -18,6 +19,8 @@ span {
 
 .type {
     float: right;
+    text-align: center;
     border: double;
     width: 50%;
+    height: 20%;
 }
