edited form styling

--- a/src/components/CustomerView/CustomerView.css
+++ b/src/components/CustomerView/CustomerView.css
@@ -4,4 +4,10 @@
     background-color: dodgerblue;
     color: white;
 }
+input {
+    text-align: left; 
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+}
 
