--- a/src/components/CheckoutView/TopComponent/TopComponent.css
+++ b/src/components/CheckoutView/TopComponent/TopComponent.css
@@ -14,6 +14,7 @@ span {
 }
 
 .address {
+    margin-left: 10px;
     width: 50%;
 }
 
@@ -23,4 +24,5 @@ span {
     border: double;
     width: 50%;
     height: 20%;
+    margin-top: 80px;
 }
