--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  background-image: url('./wood.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .App-header {
@@ -22,8 +26,6 @@
   to { transform: rotate(360deg); }
 }
 header {
-  background-color: navy;
-  color: white;
   height: 150px; 
 }
 table{
@@ -35,25 +37,33 @@ table{
 }
 th {
   background-color: lightsteelblue;
-}
-th, td {
   height: 50px; 
   text-align: center; 
   padding: 15px; 
   border-bottom: 1px solid #ddd;
 }
+
+td {
+  height: 50px; 
+  text-align: center; 
+  padding: 15px; 
+  border-bottom: 1px solid #ddd;
+  background-color: whitesmoke;
+}
 tr:hover {
-  background-color: #f5f5f5;
+  background-color: black;
 }
 #site-title {
   float: left; 
   margin-top: 50px; 
-  margin-left: 10px; 
+  margin-left: 20px; 
+  font-size: 60px;
 }
 #total-container {
   float: right;
   padding: 25px;
   margin-top: 85px;
+  color: white;
 }
 button {
   font-size: 1em;
